[gd_scene load_steps=29 format=3 uid="uid://s8dxi34l715s"]

[ext_resource type="Script" path="res://tangran/Scripts/chat.gd" id="1_gb3b3"]
[ext_resource type="Script" path="res://tangran/Scenes/Main_scene.gd" id="1_k473l"]
[ext_resource type="Script" path="res://tangran/Scripts/shapes.gd" id="2_54w1k"]
[ext_resource type="Texture2D" uid="uid://buf2cb6sjf30o" path="res://PNG/4853433.jpg" id="2_h2muw"]
[ext_resource type="PackedScene" uid="uid://2upigcih6078" path="res://control.tscn" id="4_fbgl8"]
[ext_resource type="Texture2D" uid="uid://kco07w0eokmk" path="res://PNG/file (2).png" id="5_5kvke"]
[ext_resource type="Texture2D" uid="uid://drtf76bexlri1" path="res://PNG/task1.png" id="5_cg2bn"]
[ext_resource type="Texture2D" uid="uid://bxyp82tijx1lf" path="res://PNG/Grey Chat.png" id="6_3q1he"]
[ext_resource type="Texture2D" uid="uid://b47fh428hlm8y" path="res://PNG/Antique Button.png" id="7_pduci"]
[ext_resource type="Texture2D" uid="uid://bnnpsvr735etn" path="res://PNG/octaButton.png" id="8_qapvr"]
[ext_resource type="Texture2D" uid="uid://cn2imsxgn6aj0" path="res://PNG/tangram_puzzle_title.png" id="11_d1c7c"]
[ext_resource type="Script" path="res://MainMenu.gd" id="11_efl8x"]
[ext_resource type="Texture2D" uid="uid://612x3cx67pvq" path="res://PNG/person.png" id="12_5lut2"]
[ext_resource type="Texture2D" uid="uid://sfhqyvu1jhev" path="res://PNG/image_(1)_upscaled.png" id="12_g6cii"]
[ext_resource type="Texture2D" uid="uid://cp42m3t1najkc" path="res://PNG/circle.png" id="12_kqnbf"]
[ext_resource type="Texture2D" uid="uid://cqashkfc1m5yc" path="res://PNG/robot_hd_white_upscaled.png" id="13_6bro5"]
[ext_resource type="Texture2D" uid="uid://c2h8ix70rljal" path="res://PNG/Thinking1.png" id="13_m8lrg"]
[ext_resource type="Texture2D" uid="uid://2p185iod38x2" path="res://PNG/robot.png" id="13_mhtdr"]
[ext_resource type="Texture2D" uid="uid://bcgo80dbly8h7" path="res://PNG/eye.png" id="14_86dyq"]
[ext_resource type="Texture2D" uid="uid://dmvrsove2if8l" path="res://PNG/file.png" id="14_o4054"]
[ext_resource type="Texture2D" uid="uid://dx2ksnpst30qu" path="res://PNG/drawer dark.png" id="16_inusk"]
[ext_resource type="PackedScene" uid="uid://bk0ioagvqiyew" path="res://forms.tscn" id="16_mcjkc"]
[ext_resource type="Texture2D" uid="uid://cd48hp2giaxoh" path="res://PNG/fancyButton.png" id="25_sqod4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_b0tua"]
load_path = "res://.godot/imported/Sem TÃ­tulo-1.png-527bc657a279407998df4631bd53f8c5.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mtkch"]
size = Vector2(338, 323)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmf3u"]
size = Vector2(131, 128)

[sub_resource type="Shader" id="Shader_j83ia"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u6ny4"]
shader = SubResource("Shader_j83ia")

[node name="MainScene" type="Node2D"]
script = ExtResource("1_k473l")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.384, 0.324)
texture = ExtResource("2_h2muw")

[node name="Arena" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="Arena"]
modulate = Color(1, 1, 1, 0.815686)
position = Vector2(0, -1)

[node name="Area2D" type="Area2D" parent="Arena/Background"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arena/Background/Area2D"]
position = Vector2(2, -2)
polygon = PackedVector2Array(0, -421, 525, -421, 519, 75, 520, 398, 860, 400, 862, 74, 522, 72, 522, 2, 525, -429, 1738, -410, 1739, 1029, 619, 1047, 955, 387, 1080, 386, 1080, 262, 954, 263, 953, 385, 617, 1045, -388, 1036, -368, -433)

[node name="Objective Tag" type="Sprite2D" parent="Arena"]
visible = false
position = Vector2(1335, 196)
scale = Vector2(0.12, 0.104)
texture = ExtResource("25_sqod4")

[node name="Label" type="Label" parent="Arena/Objective Tag"]
offset_left = -447.0
offset_top = -130.0
offset_right = 440.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 180
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="TargetDisplayImage" type="Sprite2D" parent="Arena"]
visible = false
position = Vector2(1037.56, 330.645)
scale = Vector2(0.297326, 0.283664)
texture = SubResource("CompressedTexture2D_b0tua")

[node name="task" type="Sprite2D" parent="Arena/TargetDisplayImage"]
visible = false
position = Vector2(-3.77168, 23.5199)
scale = Vector2(1.71169, 1.69314)
texture = ExtResource("5_cg2bn")

[node name="TargetDisplayText" type="Sprite2D" parent="Arena"]
position = Vector2(599.575, 508)
scale = Vector2(0.101452, 0.112963)
texture = ExtResource("5_5kvke")

[node name="obj" type="Label" parent="Arena/TargetDisplayText"]
offset_left = -1109.64
offset_top = -371.803
offset_right = 1104.36
offset_bottom = 30.1967
theme_override_font_sizes/font_size = 180
text = "We are making:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Objective" type="Label" parent="Arena/TargetDisplayText"]
offset_left = -784.361
offset_top = -97.3769
offset_right = 775.639
offset_bottom = 304.623
theme_override_font_sizes/font_size = 250
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ChatBox" type="Sprite2D" parent="Arena"]
position = Vector2(233.982, 322)
scale = Vector2(0.233515, 0.283045)
texture = ExtResource("6_3q1he")

[node name="TextEdit2" type="TextEdit" parent="Arena/ChatBox"]
anchors_preset = -1
anchor_left = -0.0609112
anchor_top = 0.000118565
anchor_right = -0.0609112
anchor_bottom = 0.000118565
offset_left = -649.675
offset_top = 793.992
offset_right = 550.325
offset_bottom = 871.992
theme_override_font_sizes/font_size = 50
metadata/_edit_use_anchors_ = true

[node name="Send Button" type="TextureButton" parent="Arena/ChatBox"]
offset_left = 449.372
offset_top = 762.465
offset_right = 1718.37
offset_bottom = 1263.47
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("7_pduci")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/ChatBox/Send Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 200
text = "Send

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AI_Chat" type="Node2D" parent="Arena/ChatBox"]
script = ExtResource("1_gb3b3")

[node name="ScrollContainer" type="ScrollContainer" parent="Arena/ChatBox"]
offset_left = -791.0
offset_top = -880.0
offset_right = 757.0
offset_bottom = 763.0

[node name="VBoxContainer" type="VBoxContainer" parent="Arena/ChatBox/ScrollContainer"]
custom_minimum_size = Vector2(1548, 1643)
layout_mode = 2

[node name="Control" type="Control" parent="Arena/ChatBox"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Finish Button" type="TextureButton" parent="Arena"]
offset_left = 951.0
offset_top = 454.0
offset_right = 2227.0
offset_bottom = 967.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_pduci")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/Finish Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 200
text = "Finish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Debug Button" type="TextureButton" parent="Arena"]
modulate = Color(0.8, 1, 1, 1)
offset_left = 1830.0
offset_top = 186.0
offset_right = 3099.0
offset_bottom = 687.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("8_qapvr")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/Debug Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 159
text = "Debug Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls Button" type="TextureButton" parent="Arena"]
offset_left = 951.0
offset_top = 513.0
offset_right = 2227.0
offset_bottom = 1026.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_pduci")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/Controls Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 200
text = "Controls
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HumanTurn" type="Sprite2D" parent="Arena"]
position = Vector2(1018.38, 116.665)
scale = Vector2(0.25, 0.221)
texture = ExtResource("12_kqnbf")

[node name="Person" type="Sprite2D" parent="Arena/HumanTurn"]
self_modulate = Color(1, 1, 1, 0.909804)
position = Vector2(0.169922, 5.85114)
scale = Vector2(3.96479, 4.52883)
texture = ExtResource("12_g6cii")

[node name="AITurn" type="Sprite2D" parent="Arena"]
visible = false
position = Vector2(1018.38, 116.665)
scale = Vector2(0.25, 0.221)
texture = ExtResource("12_kqnbf")

[node name="Person" type="Sprite2D" parent="Arena/AITurn"]
position = Vector2(10.4801, -3.00904)
scale = Vector2(4, 4.3)
texture = ExtResource("13_6bro5")

[node name="Sprite2D" type="Sprite2D" parent="Arena/AITurn"]
z_index = 4096
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(189448, 100001)
texture = ExtResource("13_m8lrg")

[node name="Thinking1" type="Sprite2D" parent="Arena/AITurn"]
visible = false
position = Vector2(151.48, -112.181)
scale = Vector2(0.45678, 0.494368)
texture = ExtResource("13_m8lrg")

[node name="Thinking2" type="Sprite2D" parent="Arena/AITurn"]
visible = false
position = Vector2(201.545, -171.688)
scale = Vector2(0.964022, 1.03641)
texture = ExtResource("13_m8lrg")

[node name="Thinking3" type="Sprite2D" parent="Arena/AITurn"]
visible = false
position = Vector2(279.513, -264.106)
scale = Vector2(1.37856, 1.51789)
texture = ExtResource("13_m8lrg")

[node name="Undo Button" type="TextureButton" parent="Arena"]
modulate = Color(0.568973, 0.568973, 0.568973, 1)
offset_left = 755.0
offset_top = 513.0
offset_right = 2031.0
offset_bottom = 1026.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_pduci")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/Undo Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 200
text = "Undo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="End Turn Button" type="TextureButton" parent="Arena"]
offset_left = 754.0
offset_top = 454.0
offset_right = 2030.0
offset_bottom = 967.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("7_pduci")
stretch_mode = 4

[node name="Label" type="Label" parent="Arena/End Turn Button"]
layout_mode = 0
offset_left = 150.0
offset_top = 120.0
offset_right = 1120.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 200
text = "End Turn"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArenaBoard" type="Area2D" parent="Arena"]
position = Vector2(694.5, 232.868)

[node name="GameBoard" type="Sprite2D" parent="Arena/ArenaBoard"]
scale = Vector2(0.241, 0.2)
texture = ExtResource("14_o4054")

[node name="BoardShape" type="CollisionShape2D" parent="Arena/ArenaBoard"]
position = Vector2(-2.5, 0.632004)
shape = SubResource("RectangleShape2D_mtkch")

[node name="VOrigin" type="PinJoint2D" parent="Arena/ArenaBoard"]
position = Vector2(-170.5, -159.868)

[node name="VUpperRightCorner" type="PinJoint2D" parent="Arena/ArenaBoard"]
position = Vector2(165.5, -160.868)

[node name="VBottomLeftCorner" type="PinJoint2D" parent="Arena/ArenaBoard"]
position = Vector2(-171.5, 161.132)

[node name="ArenaPieceDrawer" type="Area2D" parent="Arena"]
position = Vector2(689.625, 534.58)

[node name="PieceDrawer" type="Sprite2D" parent="Arena/ArenaPieceDrawer"]
position = Vector2(327.375, -219.58)
scale = Vector2(0.297537, 0.293055)
texture = ExtResource("16_inusk")

[node name="DrawerShape" type="CollisionShape2D" parent="Arena/ArenaPieceDrawer"]
position = Vector2(329.375, -213.58)
shape = SubResource("RectangleShape2D_wmf3u")

[node name="VOrigin" type="PinJoint2D" parent="Arena/ArenaPieceDrawer"]
position = Vector2(265.375, -276.58)

[node name="VBottomLeftCorner" type="PinJoint2D" parent="Arena/ArenaPieceDrawer"]
position = Vector2(264.375, -150.58)

[node name="VUpperRightCorner" type="PinJoint2D" parent="Arena/ArenaPieceDrawer"]
position = Vector2(393.375, -276.58)

[node name="Purple" type="Area2D" parent="."]
position = Vector2(1045, 319)
rotation = 0.785398
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D3" type="Polygon2D" parent="Purple"]
position = Vector2(2.80005, -1.20001)
rotation = 0.785397
color = Color(0.635038, 0.000510475, 0.681769, 1)
polygon = PackedVector2Array(-66.1315, 0.953491, -3.63159, 65.9535, 61.3685, 0.953613, -1.13147, -64.0465)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Purple"]
position = Vector2(1.32581, -1.32591)
rotation = 0.785398
polygon = PackedVector2Array(0, -65, 61.6, -0.399994, -1.97998, 64.5392, -65, 0)

[node name="Label" type="Label" parent="Purple"]
visible = false
offset_left = -11.6
offset_top = -12.6
offset_right = 14.4
offset_bottom = 10.4
text = "Purple"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Purple"]
position = Vector2(-44.6361, -47.2878)

[node name="V2" type="PinJoint2D" parent="Purple"]
position = Vector2(-46.4039, 42.8683)

[node name="V3" type="PinJoint2D" parent="Purple"]
position = Vector2(45.52, 42.8684)

[node name="V4" type="PinJoint2D" parent="Purple"]
position = Vector2(47.2878, -47.2878)

[node name="VCenter" type="PinJoint2D" parent="Purple"]

[node name="Brown" type="Area2D" parent="."]
position = Vector2(1002.5, 361)
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D8" type="Polygon2D" parent="Brown"]
position = Vector2(8, -8)
color = Color(0.627451, 0.321569, 0.176471, 1)
polygon = PackedVector2Array(-40, -24, 88, -24, 24, 40, -104, 40)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Brown"]
polygon = PackedVector2Array(-32, -32, 96, -32, 32, 32, -96, 32)

[node name="Label" type="Label" parent="Brown"]
visible = false
offset_left = -15.0
offset_top = -13.0
offset_right = 12.0
offset_bottom = 10.0
text = "Brown"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Brown"]
position = Vector2(-32, -32)

[node name="V2" type="PinJoint2D" parent="Brown"]
position = Vector2(96, -32)

[node name="V3" type="PinJoint2D" parent="Brown"]
position = Vector2(-96, 32)

[node name="V4" type="PinJoint2D" parent="Brown"]
position = Vector2(32, 32)

[node name="VCenter" type="PinJoint2D" parent="Brown"]

[node name="Cream" type="Area2D" parent="."]
material = SubResource("ShaderMaterial_u6ny4")
position = Vector2(991, 318)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D" type="Polygon2D" parent="Cream"]
position = Vector2(-64.0404, 6.84457)
rotation = -2.35619
scale = Vector2(1.00003, 0.999299)
color = Color(0.982343, 0.757204, 0.578067, 1)
polygon = PackedVector2Array(-175.23, 95.7112, 5.07672, 95.7102, 5.07587, -84.7285)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cream"]
position = Vector2(1.52588e-05, -0.199997)
rotation = -1.5708
polygon = PackedVector2Array(-64, -127.8, 64, 0.200012, -64, 128.2)

[node name="Label" type="Label" parent="Cream"]
visible = false
offset_left = -13.0
offset_top = -11.0
offset_right = 13.0
offset_bottom = 12.0
text = "Cream"
metadata/_edit_use_anchors_ = true

[node name="SquareSnap" type="PinJoint2D" parent="Cream"]
position = Vector2(1.13376e-05, 130.625)

[node name="TriangleSnap1" type="PinJoint2D" parent="Cream"]
position = Vector2(-67.5, -68.75)

[node name="TriangleSnap2" type="PinJoint2D" parent="Cream"]
position = Vector2(67.5, -68.75)

[node name="V1" type="PinJoint2D" parent="Cream"]
position = Vector2(-6.48499e-05, -64.375)

[node name="V2" type="PinJoint2D" parent="Cream"]
position = Vector2(-127.5, 63.125)

[node name="V3" type="PinJoint2D" parent="Cream"]
position = Vector2(127.5, 63.125)

[node name="VCenter" type="PinJoint2D" parent="Cream"]
position = Vector2(3.55155e-07, 8.125)

[node name="Red" type="Area2D" parent="."]
position = Vector2(1018.5, 291)
rotation = 3.14159
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D2" type="Polygon2D" parent="Red"]
position = Vector2(8, -64)
rotation = 2.35619
color = Color(0.823529, 0, 0.117647, 1)
texture_scale = Vector2(6.175, 9.82)
texture_rotation = 2.97579
polygon = PackedVector2Array(3.62378, -178.81, 5.3916, 6.80591, 187.472, 5.03833)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Red"]
position = Vector2(0, -1.52588e-05)
rotation = 3.14159
polygon = PackedVector2Array(-128, -64, 128, -64, 0, 64)

[node name="Label" type="Label" parent="Red"]
visible = false
offset_left = -12.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 11.0
text = "Red"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Red"]
position = Vector2(-0.624985, -65.0001)

[node name="V2" type="PinJoint2D" parent="Red"]
position = Vector2(131.875, 64.9999)

[node name="V3" type="PinJoint2D" parent="Red"]
position = Vector2(-128.125, 65)

[node name="VCenter" type="PinJoint2D" parent="Red"]
position = Vector2(-0.624999, 10)

[node name="SquareSnap" type="PinJoint2D" parent="Red"]
position = Vector2(1.13376e-05, 130.625)

[node name="TriangleSnap1" type="PinJoint2D" parent="Red"]
position = Vector2(-68.75, -67.5)

[node name="TriangleSnap2" type="PinJoint2D" parent="Red"]
position = Vector2(68.75, -67.5)

[node name="Yellow" type="Area2D" parent="."]
position = Vector2(1062, 292)
rotation = -1.5708
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D4" type="Polygon2D" parent="Yellow"]
position = Vector2(24, 0)
rotation = 0.785397
color = Color(0.854902, 0.647059, 0.12549, 1)
polygon = PackedVector2Array(46.2271, -11.7554, -45.6967, -11.7556, -45.6968, 80.1682)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Yellow"]
rotation = 1.5708
polygon = PackedVector2Array(24, -64, 24, 64, -40, 0)

[node name="Label" type="Label" parent="Yellow"]
visible = false
offset_left = -12.0
offset_top = -13.0
offset_right = 13.0
offset_bottom = 10.0
text = "Yellow"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Yellow"]
position = Vector2(-1.33514e-05, -40.6251)

[node name="V2" type="PinJoint2D" parent="Yellow"]
position = Vector2(-62.5, 24.375)

[node name="V3" type="PinJoint2D" parent="Yellow"]
position = Vector2(65, 24.3751)

[node name="VCenter" type="PinJoint2D" parent="Yellow"]

[node name="SquareSnap" type="PinJoint2D" parent="Yellow"]
position = Vector2(2.50001, 61.875)

[node name="TriangleSnap1" type="PinJoint2D" parent="Yellow"]
position = Vector2(-40, -41.5)

[node name="TriangleSnap2" type="PinJoint2D" parent="Yellow"]
position = Vector2(40, -41.5)

[node name="Green" type="Area2D" parent="."]
position = Vector2(1018, 333)
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D7" type="Polygon2D" parent="Green"]
position = Vector2(3.05176e-05, 32)
color = Color(0.293972, 0.999015, 0.256818, 1)
polygon = PackedVector2Array(-0.625, -64.5, -63.125, 0.5, 64.375, 0.5)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Green"]
polygon = PackedVector2Array(0, -32, -64, 32, 64, 32)

[node name="Label" type="Label" parent="Green"]
visible = false
offset_left = -11.0
offset_top = -13.0
offset_right = 21.0
offset_bottom = 10.0
text = "Green"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Green"]
position = Vector2(0, -32)

[node name="V2" type="PinJoint2D" parent="Green"]
position = Vector2(-64, 32)

[node name="V3" type="PinJoint2D" parent="Green"]
position = Vector2(64, 32)

[node name="VCenter" type="PinJoint2D" parent="Green"]

[node name="VCenter2" type="PinJoint2D" parent="Green"]
position = Vector2(110, -102.5)
rotation = -1.5708

[node name="SquareSnap" type="PinJoint2D" parent="Green"]
position = Vector2(2.50001, 61.875)

[node name="TriangleSnap1" type="PinJoint2D" parent="Green"]
position = Vector2(-40, -41.5)

[node name="TriangleSnap2" type="PinJoint2D" parent="Green"]
position = Vector2(40, -41.5)

[node name="Blue" type="Area2D" parent="."]
position = Vector2(1058, 360)
rotation = 3.92699
scale = Vector2(0.4, 0.4)
script = ExtResource("2_54w1k")

[node name="Polygon2D5" type="Polygon2D" parent="Blue"]
position = Vector2(-96, 32)
rotation = -1.57079
color = Color(0, 0.392157, 0.788235, 1)
polygon = PackedVector2Array(32.4423, 50.48, -57.7133, 140.636, 122.599, 140.635)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Blue"]
rotation = 2.35619
polygon = PackedVector2Array(32, 32, -96, 32, 32, -96)

[node name="Label" type="Label" parent="Blue"]
visible = false
offset_left = -20.0
offset_top = -14.0
offset_right = 12.0
offset_bottom = 9.0
text = "Blue"
metadata/_edit_use_anchors_ = true

[node name="V1" type="PinJoint2D" parent="Blue"]
position = Vector2(44.6361, -90.5981)

[node name="V2" type="PinJoint2D" parent="Blue"]
position = Vector2(-45.52, -0.441933)

[node name="V3" type="PinJoint2D" parent="Blue"]
position = Vector2(44.6361, 89.7142)

[node name="VCenter" type="PinJoint2D" parent="Blue"]
position = Vector2(7.51301, 3.09359)

[node name="Forms" parent="." instance=ExtResource("16_mcjkc")]
visible = false

[node name="Controls" parent="." instance=ExtResource("4_fbgl8")]
visible = false
offset_left = 15.0
offset_top = -6.0
offset_right = 15.0
offset_bottom = -6.0

[node name="Main Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("11_efl8x")

[node name="BackGroundVideo" type="VideoStreamPlayer" parent="Main Menu"]
layout_mode = 0
offset_left = -144.0
offset_top = -56.0
offset_right = 1776.0
offset_bottom = 1032.0
scale = Vector2(0.75, 0.75)
autoplay = true
loop = true

[node name="TitleName" type="Sprite2D" parent="Main Menu"]
position = Vector2(565, 168)
texture = ExtResource("11_d1c7c")

[node name="MenuChoices" type="VBoxContainer" parent="Main Menu"]
layout_mode = 0
offset_left = 440.0
offset_top = 256.0
offset_right = 680.0
offset_bottom = 576.0

[node name="NoAIChoice" type="Button" parent="Main Menu/MenuChoices"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
action_mode = 0
text = "Play without AI"
icon = ExtResource("12_5lut2")

[node name="TurnBasedAI" type="Button" parent="Main Menu/MenuChoices"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
action_mode = 0
text = "Turn Based with AI
"
icon = ExtResource("13_mhtdr")

[node name="SoloAI" type="Button" parent="Main Menu/MenuChoices"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
action_mode = 0
text = "Watch AI play
"
icon = ExtResource("14_86dyq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(573, 327)
zoom = Vector2(1.67, 1.67)

[connection signal="pressed" from="Arena/ChatBox/Send Button" to="Arena/ChatBox/AI_Chat" method="_on_pressed"]
[connection signal="pressed" from="Arena/Finish Button" to="." method="_on_finish_button_pressed"]
[connection signal="pressed" from="Arena/Debug Button" to="." method="_on_Debug_button_pressed"]
[connection signal="pressed" from="Arena/Controls Button" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="Arena/Undo Button" to="." method="_undo_play"]
[connection signal="pressed" from="Arena/End Turn Button" to="." method="finishPlayerTurn"]
[connection signal="input_event" from="Purple" to="." method="_on_DraggableObject_input_event" binds= ["Purple"]]
[connection signal="mouse_entered" from="Purple" to="." method="_on_mouse_entered" binds= ["Purple"]]
[connection signal="input_event" from="Brown" to="." method="_on_DraggableObject_input_event" binds= ["Brown"]]
[connection signal="mouse_entered" from="Brown" to="." method="_on_mouse_entered" binds= ["Brown"]]
[connection signal="input_event" from="Cream" to="." method="_on_DraggableObject_input_event" binds= ["Cream"]]
[connection signal="mouse_entered" from="Cream" to="." method="_on_mouse_entered" binds= ["Cream"]]
[connection signal="input_event" from="Red" to="." method="_on_DraggableObject_input_event" binds= ["Red"]]
[connection signal="mouse_entered" from="Red" to="." method="_on_mouse_entered" binds= ["Red"]]
[connection signal="input_event" from="Yellow" to="." method="_on_DraggableObject_input_event" binds= ["Yellow"]]
[connection signal="mouse_entered" from="Yellow" to="." method="_on_mouse_entered" binds= ["Yellow"]]
[connection signal="area_entered" from="Green" to="Green" method="_on_area_entered"]
[connection signal="input_event" from="Green" to="." method="_on_DraggableObject_input_event" binds= ["Green"]]
[connection signal="mouse_entered" from="Green" to="." method="_on_mouse_entered" binds= ["Green"]]
[connection signal="input_event" from="Blue" to="." method="_on_DraggableObject_input_event" binds= ["Blue"]]
[connection signal="mouse_entered" from="Blue" to="." method="_on_mouse_entered" binds= ["Blue"]]
[connection signal="pressed" from="Main Menu/MenuChoices/NoAIChoice" to="Main Menu" method="_on_no_ai_choice_pressed"]
[connection signal="pressed" from="Main Menu/MenuChoices/TurnBasedAI" to="Main Menu" method="_on_turn_based_ai_pressed"]
